Ticket #28688: Bugfix: Do not hide separator in collapsed state.
The separator between collapse/expand button and the rest of the toolbar
must not be hidden in collapsed state, otherwise multiple groups that
are displayed one below another look strange.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -248,10 +248,6 @@ span.can-edit {
 	list-style-type: none;	
 }
 
-.collapsed .frmGroupExpand::before {
-	content: none;
-}
-
 .frmGroupExpand {
 	display: inline-flex;
 }
